<resources>
    <string name="app_name">Green Code</string>
    <string name="search_box">Pesquese por um produto</string>
    <string name="destaques">Principais ofertasda semana</string>
    <string name="troque_seus_pontos">Troque seus pontos green por um controle de Xbox One \u00a9</string>
    <string name="pontos">Pts: 10.000.00</string>
    <string name="lista_produtos">Lista de produtos</string>
    <string name="Ingresso">Ingressos para sessões de cinema em SP</string>
</resources>
